   a previous session was imported.
 * Fixed a crash with HAL >= 0.5 when exiting K3b.
 * Allow copying of double layer DVDs with a size below 4.3 GB to single layer media.
 * Support for the ring buffer in growisofs 6.0.
 * Use .iso extension for images instead of .img
 * Properly remove the image file in case verification failed.
 * Ignore mounting state of a medium when showing its contents.

0.12.10
=======
 * Fixed Auto multisession mode in DVD projects
 * Fixed crash in dcop call directBurn in case no valid burner device was set.
 * Fixed verification of datacd projects when using the MaxIso9660 option without the OmitVersionNumber option

0.12.9
======
 * New project dcop calls:
    directBurn() - directly starts the burn process without user interaction
    setBurnDevice(QString) - set the burn device to be used
 * Disable the cd-text fields if cd-text writing is disabled.
 * New Alsa audio output plugin.
 * If a DVD project does not fill up the DVD completely do not close the DVD in automatic 
   multisession mode.
 * Fixed problems with filenames ending in backslashes.
 * Fixed verification problems with localized characters.
 * Added error handling for incorrectly encoded filenames.
 * Automatically use a newly installed version of an external application at the next K3b start.
 * Complete new set of K3b action icons for project types and tools. Many thanks to Marcel Dierkes.
 * Show text on the burn button to make it catch the eye.
 * Support for media:// urls in the Image writing dialogs.
 * Fixed problems with files bigger than 2 GB on some systems.

0.12.8
======
 * Load index0 value in audio project.
 * Ignore case in cue files.
 * The "eject media" setting was not used properly in some situations (thanks to simon@munton.demon.co.uk for the patch)
 * Fixed a bug in the mp3 decoder which caused it to miss some perfectly valid mp3 files.

0.12.7
======
 * Fixed crash when refreshing the device list.